added art shop link

--- a/projects/index.html
+++ b/projects/index.html
@@ -18,43 +18,57 @@
     <aside id="desktop">
       <img src="../images/BANGLOANDLOGO01.gif" alt="" />
       <p>
-        <a class="button" href="../index.html"
-          ><span style="background-color: rgb(8, 255, 90)"><</span> ENTER
-          BANGOLAND
+        <a
+          class="button"
+          style="background-color: rgb(82, 219, 77)"
+          href="../index.html"
+          ><span style="background-color: rgb(77, 167, 219)"><</span> PLAYGROUND
+          <span style="background-color: rgb(77, 167, 219)">></span>
+        </a>
+      </p>
+      <br />
+      <p>
+        <a
+          class="button"
+          style="background-color: rgb(77, 167, 219)"
+          href="../index.html"
+          ><span style="background-color: rgb(8, 255, 90)"><</span> ART SHOP
           <span style="background-color: rgb(8, 255, 90)">></span>
         </a>
       </p>
     </aside>
 
     <main id="popup">
-      <legend>BANGOLAND - SEASON 01</legend>
+      <legend>BANGOLAND - WORLD</legend>
       <p>
         <img src="../images/aniearth.gif" style="width: 20px" alt="" />
         <b>LINKS </b>
       </p>
       <ul>
-        <li>
-          INSTAGRAM
-          <a href="../index.html">[instagram.com]</a>
+        <li style="font-size: large; font-weight: bold">
+          PLAYGROUND
+          <a href="../index.html">[BANGOLAND]</a>
         </li>
-        <!-- <li>
-          TELEGRAM
-          <a href="../index.html">[telegram.com]</a>
-        </li> -->
-        <li>X.COM<a href="https://llxi.me/work/">[x.com]</a></li>
+        <li style="font-size: large; font-weight: bold">
+          ART-SHOP<a href="https://llxi.me/work/">[FINE ART]</a>
+        </li>
       </ul>
       <p>
         <b>-</b>
       </p>
-      <legend>BANGOLAND PLAYGROUND</legend>
+      <legend>BANGOLAND SOCIAL</legend>
       <ul>
         <li>
-          EXPLORE
-          <a href="https://dexscreener.com/">[BANGOLAND]</a>
+          INSTAGRAM
+          <a href="https://dexscreener.com/">[Instagram]</a>
         </li>
         <li>
           SPOTIFY
           <a target="_blank" href="https://spotify.com">[spotify.com]</a>
+        </li>
+        <li>
+          X.COM
+          <a target="_blank" href="https://spotify.com">[x.com]</a>
         </li>
       </ul>
       <nav>
