--- a/projects/index.html
+++ b/projects/index.html
@@ -10,13 +10,21 @@
 
   <body>
     <h1>BANGOLAND - SEASON 01</h1>
-
+    <br />
+    <div class="somelink hoverbtn">INSTAGRAM</div>
+    <div class="somelink hoverbtn">X.COM</div>
+    <div class="somelink hoverbtn">SPOTIFY</div>
     <img class="topright" src="../images/dance-tr2.gif" alt="Gears" />
 
     <img class="bottomleft" src="../images/dance-bl.gif" alt="Gears" />
 
     <aside id="desktop">
-      <img src="../images/BANGLOANDLOGO01.gif" alt="" />
+      <img
+        onclick="myFunction()"
+        class="hoverbtn"
+        src="../images/BANGLOANDLOGO01.gif"
+        alt=""
+      />
       <p>
         <a
           class="button"
@@ -38,7 +46,7 @@
       </p>
     </aside>
 
-    <main id="popup">
+    <!-- <main id="popup">
       <legend>BANGOLAND - WORLD</legend>
       <p>
         <img src="../images/aniearth.gif" style="width: 20px" alt="" />
@@ -75,10 +83,10 @@
         <span><a href="#" onClick="closePopup()">Ok</a></span>
         <span><a href="#" onClick="closePopup()">Cancel</a></span>
       </nav>
-    </main>
+    </main> -->
     <div class="backpanel">
-      <button onClick="closePopup(); myFunction()">LINKS</button>
-      <button onClick="myFunction()">BANGO BANGO</button>
+      <!-- <button onClick="closePopup(); myFunction()">LINKS</button>
+      <button onClick="myFunction()">BANGO BANGO</button> -->
     </div>
 
     <script>
