--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>$MAYNE - DOLLAMAYNE</title>
+    <title>DOLLARBURGER : $BURGER</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./images/icon.png" />
@@ -9,20 +9,43 @@
   </head>
 
   <body>
-    <h1>OFFICIAL $MAYNE - DOLLAMAYNE.com - $MAYNE</h1>
+    <h1>dollarburger.fun</h1>
 
     <img class="topright" src="./images/dance-tr.gif" alt="Gears" />
 
     <img class="bottomleft" src="./images/dance-bl.gif" alt="Gears" />
 
     <aside id="desktop">
-      <img src="./images/mayne-logo-anim-01b.gif" alt="" />
+      <img src="./images/logo02.gif" alt="" />
       <p>
-        <a class="button" href="https://dexscreener.com/" target="_blank"
-          >CREATE
+        <a
+          class="button"
+          style="
+            font-size: 30px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          "
+          href="https://dexscreener.com/"
+          target="_blank"
+          >$BURGER
           <span style="background-color: rgb(8, 255, 90)"> </span>
         </a>
       </p>
+      <p>CC dasasdasadsadsadsasd</p>
+      <br />
+      <p>
+        <a
+          class="button"
+          style="
+            font-size: 17px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          "
+          href="https://dexscreener.com/"
+          target="_blank"
+          >OFFICAL CARDS
+          <span style="background-color: rgb(8, 255, 90)"> </span>
+        </a>
+      </p>
+      <p>BUY or TRADE</p>
     </aside>
 
     <main id="popup">
@@ -73,7 +96,7 @@
     </main>
 
     <div class="backpanel">
-      <button onClick="closePopup()">INFO</button>
+      <button onClick="closePopup()">CHAT</button>
     </div>
 
     <script>
