--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>BUY or TRADE</p>
     </aside>
 
-    <main id="popup">
+    <main id="popup" class="hidden">
       <legend>BANGOLAND</legend>
       <p>
         <!-- <b>CA: EZDwvexi9tWuduXTsqCNmgQNPpLPpXJySHCX3PNr </b> -->
