--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>DOLLARBURGER : $BURGER - LIVE BROADCAST</title>
+    <title>$PONGY PENGUINS</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./images/icon.png" />
@@ -10,19 +10,25 @@
 
   <body>
     <!-- <h1 >dollarburger.fun</h1> -->
-
-    <img class="topright logoBtn" src="./images/dance-tr.gif" alt="Gears" />
+    <img
+      class="topleft skullBtn"
+      style="width: 80px"
+      src="./images/garbloo.gif"
+      alt="Gears"
+      id="startBtn"
+    />
+    <img class="topright logoBtn" src="./images/dance-tr2.gif" alt="Gears" />
 
     <img
       class="bottomleft skullBtn"
-      src="./images/burgtist.gif"
+      src="./images/pongy_gif_01.gif"
       alt="Gears"
       id="startBtn"
     />
     <audio id="audioPlayer"></audio>
 
     <aside id="desktop">
-      <img class="logoBtn" src="./images/logo02.gif" alt="" />
+      <img class="skullBtn" src="./images/logo01.gif" alt="" />
       <br />
       <!-- <a
         style="
@@ -40,7 +46,36 @@
       </a> -->
 
       <br />
-      <p>
+      <div>
+        <a
+          class="button2"
+          style="
+            font-family: 'comicsans', 'Segoe UI', Tahoma, Geneva, Verdana,
+              sans-serif;
+          "
+          href="https://letsbonk.fun/"
+          target="_blank"
+        >
+          <img src="./images/dolr.gif" style="width: auto" alt="" />
+
+          <span style="background-color: rgb(8, 255, 90)"> </span>
+        </a>
+      </div>
+      <div>
+        <p
+          class="ccBox animated-bg"
+          onclick="clickToCopy()"
+          title="Click to copy CA!"
+        >
+          <!-- <span class="ccText"> CA: </span> -->
+          <span id="ccAddress">TICKER WILL BE HERE</span>
+        </p>
+        <a href="https://x.com/pongypenguins" target="_blank" class="skullBtn">
+          <img src="./images/e44cr2rivzee1.gif" style="width: 50px;"" alt="">
+        </a>
+      </div>
+
+      <!-- <p>
         <a
           class="button2"
           style="
@@ -50,25 +85,58 @@
           href="https://dexscreener.com/"
           target="_blank"
         >
-          <img src="./images/dolr.gif" style="width: auto" alt="" /><img
-            src="./images/tumblr_mcbnenI0EQ1rgbrd6o1_500.gif"
-            style="width: 50px"
+          <img
+            src="./images/burgshow.png"
+            style="padding-top: 20px; width: 80px; opacity: 0.5"
             alt=""
           />
-
-          <span style="background-color: rgb(8, 255, 90)"> </span>
         </a>
-      </p>
-      <div>
-        <p class="ccBox" onclick="clickToCopy()" title="Click to copy CA!">
-          <span class="ccText"> CA: </span>
-          <span id="ccAddress">dasasdasadsadsadsasd</span>
-        </p>
-      </div>
+      </p> -->
     </aside>
 
     <main id="popup" class="hidden">
-      <legend>DOLLARBURGER</legend>
+      <legend>$PONGY</legend>
+      <br />
+      <ul>
+        <p
+          onclick="clickToCopy()"
+          id="ccAddress"
+          onclick="clickToCopy()"
+          title="Click to copy CA!"
+          class="logoBtn samepopup"
+          style="font-size: 12px; text-align: center"
+        >
+          TICKER WILL BE HERE
+        </p>
+      </ul>
+      <nav>
+        <span
+          ><a
+            href="#"
+            class="logoBtn samepopup"
+            style="
+              border: solid rgb(50, 130, 204) 3px;
+              background-color: rgb(0, 83, 190);
+              color: white;
+            "
+            title="Click to copy CA!"
+            onClick="clickToCopy()"
+            >Copy CA</a
+          ></span
+        >
+        <span
+          ><a
+            href="https://letsbok.fun/"
+            class="logoBtn samepopup"
+            style="
+              border: solid rgb(50, 204, 75) 3px;
+              background-color: green;
+              color: white;
+            "
+            >Trade</a
+          ></span
+        >
+      </nav>
       <p>
         <!-- <b>CA: EZDwvexi9tWuduXTsqCNmgQNPpLPpXJySHCX3PNr </b> -->
       </p>
@@ -77,24 +145,24 @@
           TELEGRAM
           <a href="https://telegram.com">[t.me/dollamayne]</a>
         </li> -->
+
         <li>
-          INSTAGRAM
-          <a href="https://instagram.com/dollarburger">[instagram.com]</a>
+          <img
+            src="./images/gifs/pongy_gif_02.gif"
+            style="width: 50px"
+            alt=""
+          />
+          PONGY GIFS
+          <a href="https://giphy.com/pongypenguins"> BROWSE</a>
         </li>
-        <li>X.COM<a href="https:x.com/dollarburger_fun">[x.com]</a></li>
         <li>
-          YOUTUBE
-          <a target="_blank" href="https://youtube.com/u/dollarburger"
-            >[youtube.com]</a
-          >
-        </li>
-        <li style="text-decoration: line-through; color: gray">
-          TIKTOK
-          <a target="_blank" href="" style="color: gray">[TBA]</a>
-        </li>
-        <li style="text-decoration: line-through; color: gray">
-          SPOTIFY
-          <a target="_blank" href="" style="color: gray">[TBA]</a>
+          <img
+            src="./images/gifs/pongy_gif_01.gif"
+            style="width: 50px"
+            alt=""
+          />
+          PONGY BEATS
+          <a href="https://soundcloud.com">BROWSE </a>
         </li>
 
         <!-- <li>
@@ -110,18 +178,23 @@
           >
         </li> -->
       </ul>
-      <ul>
-        <li>
-          $BURGER
-          <a target="_blank" href="https://spotify/">[dexscreener.com]</a>
-        </li>
-        <p style="font-size: 12px" onclick="clickToCopy()" class="logoBtn">
-          CC: fjhsdjhkdsfkjhkdsfhjhkjdsfhjksdfhkjsdfhjk
-        </p>
-      </ul>
       <nav>
-        <span><a href="#" onClick="closePopup()">Ok</a></span>
-        <span><a href="#" onClick="closePopup()">Cancel</a></span>
+        <span
+          ><a
+            class="samepopup"
+            href="#"
+            style="
+              border: solid rgb(68, 68, 68) 3px;
+              background-color: rgb(184, 81, 81);
+              color: white;
+            "
+            onClick="closePopup()"
+            >Exit</a
+          ></span
+        >
+        <!-- <span
+          ><a class="samepopup" href="#" onClick="closePopup()">Cancel</a></span
+        > -->
       </nav>
     </main>
 
@@ -132,7 +205,7 @@
           onClick="closePopup()"
           src="./images/aniearth.gif"
           alt=""
-        />LINKS
+        />PONGY WORLD
       </button>
     </div>
 
@@ -146,8 +219,10 @@
       // Liste over mp3-filer i ./audio/
       const audioFiles = [
         "audio/burger01.mp3",
-        "audio/burger01.mp3",
+        "audio/burger02.mp3",
+        "audio/burger04.mp3",
         "audio/burger03.mp3",
+        "audio/burger05.mp3",
       ];
 
       let current = 0;
