--- a/pre-load/index.html
+++ b/pre-load/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BANGOLAND</title>
+    <title>PONGY PENGIUINS</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../images/icon.png" />
@@ -9,28 +9,18 @@
   </head>
 
   <body>
-    <h1>BANGOLAND - SEASON 01</h1>
+    <h1>Loaded: PONGY PENGIUINS</h1>
     <br />
-    <div class="somelink hoverbtn">INSTAGRAM</div>
-    <div class="somelink hoverbtn">X.COM</div>
-    <div class="somelink hoverbtn">SPOTIFY</div>
-    <img class="topright" src="../images/dance-tr2.gif" alt="Gears" />
-
-    <img class="bottomleft" src="../images/dance-bl.gif" alt="Gears" />
 
     <aside id="desktop">
-      <img
-        onclick="myFunction()"
-        class="hoverbtn"
-        src="../images/BANGLOANDLOGO01.gif"
-        alt=""
-      />
+      <img src="../images/logo01.gif" alt="" />
       <p>
         <a
           class="button"
           style="background-color: rgb(82, 219, 77)"
           href="../index.html"
-          ><span style="background-color: rgb(77, 167, 219)"><</span> PLAYGROUND
+          onclick=""
+          ><span style="background-color: rgb(77, 167, 219)"><</span> ENTER
           <span style="background-color: rgb(77, 167, 219)">></span>
         </a>
       </p>
@@ -38,9 +28,9 @@
       <p>
         <a
           class="button"
-          style="background-color: rgb(77, 167, 219)"
+          style="background-color: rgb(179, 38, 38)"
           href="../index.html"
-          ><span style="background-color: rgb(8, 255, 90)"><</span> ART SHOP
+          ><span style="background-color: rgb(8, 255, 90)"><</span> EXIT
           <span style="background-color: rgb(8, 255, 90)">></span>
         </a>
       </p>
