--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             alt=""
           />
           PONGY GIFS
-          <a href="https://giphy.com/pongypenguins"> BROWSE</a>
+          <a href="https://giphy.com/pongypenguins" target="_blank"> BROWSE</a>
         </li>
         <li>
           <img
@@ -162,7 +162,7 @@
             alt=""
           />
           PONGY BEATS
-          <a href="https://soundcloud.com">BROWSE </a>
+          <a href="https://soundcloud.com" target="_blank">BROWSE </a>
         </li>
 
         <!-- <li>
