--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
             alt=""
           />
           PONGY GIFS
-          <a href="https://giphy.com/pongypenguins" target="_blank"> BROWSE</a>
+          <a href="https://giphy.com/channel/pongyworld" target="_blank">
+            BROWSE</a
+          >
         </li>
         <li>
           <img
@@ -162,7 +164,9 @@
             alt=""
           />
           PONGY BEATS
-          <a href="https://soundcloud.com" target="_blank">BROWSE </a>
+          <a href="https://soundcloud.com/pongyworld" target="_blank"
+            >BROWSE
+          </a>
         </li>
 
         <!-- <li>
