--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           title="Click to copy CA!"
         >
           <!-- <span class="ccText"> CA: </span> -->
-          <span id="ccAddress">TICKER WILL BE HERE</span>
+          <span id="ccAddress"
+            >De6MRQEgpBbUZ2bfJLzDNZUPUVeWRZ6a6NpM6EzBpump</span
+          >
         </p>
         <a href="https://x.com/pongypenguins" target="_blank" class="skullBtn">
           <img src="./images/e44cr2rivzee1.gif" style="width: 50px;"" alt="">
@@ -106,7 +108,7 @@
           class="logoBtn samepopup"
           style="font-size: 12px; text-align: center"
         >
-          TICKER WILL BE HERE
+          De6MRQEgpBbUZ2bfJLzDNZUPUVeWRZ6a6NpM6EzBpump
         </p>
       </ul>
       <nav>
