--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             font-family: 'comicsans', 'Segoe UI', Tahoma, Geneva, Verdana,
               sans-serif;
           "
-          href="https://letsbonk.fun/"
+          href="https://pump.fun/coin/De6MRQEgpBbUZ2bfJLzDNZUPUVeWRZ6a6NpM6EzBpump"
           target="_blank"
         >
           <img src="./images/dolr.gif" style="width: auto" alt="" />
