--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         navigator.clipboard
           .writeText(textToCopy)
           .then(() => {
-            alert("Adresse kopiert: " + textToCopy);
+            alert("CA COPIED: " + textToCopy);
           })
           .catch((err) => {
             console.error("Feil ved kopiering: ", err);
