--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             alert("CA COPIED: " + textToCopy);
           })
           .catch((err) => {
-            console.error("Feil ved kopiering: ", err);
+            console.error("error: ", err);
           });
       }
     </script>
