--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         >
         <span
           ><a
-            href="https://letsbok.fun/"
+            href="https://pump.fun/coin/De6MRQEgpBbUZ2bfJLzDNZUPUVeWRZ6a6NpM6EzBpump"
             class="logoBtn samepopup"
             style="
               border: solid rgb(50, 204, 75) 3px;
